--- a/dot_config/brewfile
+++ b/dot_config/brewfile
@@ -2,7 +2,6 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
-cask_args appdir: "/Applications"
 
 brew "chezmoi"
 
@@ -21,15 +20,15 @@ brew "trash"
 # GUI tweeks
 
 #https://github.com/sindresorhus/quick-look-plugins
-brew cask "qlcolorcode"
-brew cask "qlstephen"
-brew cask "qlmarkdown"
-brew cask "quicklook-json"
-brew cask "qlimagesize"
-brew cask "suspicious-package"
-brew cask "apparency"
-brew cask "quicklookase"
-brew cask "qlvideo"
+cask "qlcolorcode"
+cask "qlstephen"
+cask "qlmarkdown"
+cask "quicklook-json"
+cask "qlimagesize"
+cask "suspicious-package"
+cask "apparency"
+cask "quicklookase"
+cask "qlvideo"
 
 
 
